--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,14 +2,11 @@
 @tailwind components;
 @tailwind utilities;
 
-html,
-body {
-  padding: 0;
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-}
+@import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
 
+*> *{
+  font-family: 'Poppins', sans-serif;
+}
 a {
   color: inherit;
   text-decoration: none;
